# DevBox

./: .SRCINFO  CMakeLists.txt  PKGBUILD  readme.md
.github/workflows/: ci.yml
src/: main.cpp
src/commands/: clean_env.cpp  clean_env.hpp  enter_env.cpp  enter_env.hpp  list_env.cpp  list_env.hpp  new_env.cpp  new_env.hpp
src/utils/: config.cpp  config.hpp  filesystem.cpp  filesystem.hpp  sandbox.cpp  sandbox.hpp  template_manager.cpp  template_manager.hpp
templates/c/: Makefile
templates/c/src/: main.c
templates/cpp/: CMakeLists.txt
templates/cpp/src/: main.cpp
templates/node/: index.js  package.json
templates/python/: main.py
templates/rust/src/: main.rs
templates/ts/: index.js  package.json  tsconfig.json
tests/: test_devbox.cpp  test_main.cpp
